# viam-rover2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  viam_rover2.xml
bringup/config/: ekf.yaml  navigate_to_pose_gentle_recovery_jazzy.xml  rover2_controllers.yaml  rover2_nav.param.yaml  rtabmap_d421.yaml
bringup/launch/: nav2_bringup.launch.py  rover2_bringup.launch.py  rover2_control.launch.py  rtabmap_d421.launch.py  wandering_mapper.launch.py
description/ros2_control/: rover2.ros2_control.xacro
description/urdf/: rover2.joints.xacro  rover2.urdf.xacro
firmware/rp2040/: CMakeLists.txt  flash.sh  pico_sdk_import.cmake
firmware/rp2040/src/: encoder.c  encoder.h  i2c_sensors.c  i2c_sensors.h  main.c  motor.c  motor.h  protocol.c  protocol.h  telemetry.c  telemetry.h
hardware/include/viam_rover2/: rover2_system.hpp  rp2040_bridge.hpp  rp2040_sensor_node.hpp  visibility_control.h
hardware/src/: rover2_system.cpp  rp2040_bridge.cpp  rp2040_sensor_node.cpp
hardware/test/: test_rover2_system.cpp
tools/: forward_velocity_probe.py  motor_diagnostic.py  rp2040_telemetry_monitor.py
