<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>viam_rover2</name>
  <version>0.0.0</version>

  <description>ROS 2 package for controlling a Viam Rover 2 using a Radxa X4 board.</description>
  <maintainer email="mikelikesrobots@outlook.com">Mike Likes Robots</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>action_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav_msgs</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>foxglove_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>twist_stamper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
